2004-08-03  Shaun McCance  <shaunm@gnome.org>

	* stylesheets/l10n.xml.in:
	- Don't use entities, since intltool borks them

2004-06-01  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-io-channel.c:
	- Moved #include <stdio.h> above the other #includes

2004-05-24  Pablo Saratxaga  <pablo@mandrakesoft.com>

	* configure.in: Added Tajik (tg) to ALL_LINGUAS

2004-05-07  Arvind Samptur  <arvind.samptur@wipro.com>

	* src/yelp-main.c (main_save_session): Get the open_urls
	in the right index of argv
	(main_restore_session): Need get rid of "\"" before passing
	the url to main_open_new_window ().  (#142081)

2004-04-27  Pablo Saratxaga  <pablo@mandrakesoft.com>

	* configure.in: Added Basque (eu) end Georgian (ka),
	to ALL_LINGUAS

2004-04-26  Morten Welinder  <terra@gnome.org>

	* src/yelp-window.c (window_handle_page): Fix the rest of #140595.

	* src/yelp-db-pager.c (db_pager_process): Free path, free walker,
	and free the transformed document.  (#140630)

2004-04-20  Shaun McCance  <shaunm@gnome.org>

	* Makefile.am:
	- Removing OrigTree.pm from EXTRA_DIST, I guess

	* configure.in:
	- Version 2.6.1

	* po/*.po:
	- Stuff distcheck likes to do

2004-04-20  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-window.c:
	- Fixed leak in window_handle_pager_uri, #140597  (Morten Welinder)
	- Fixed leak in window_handle_page, #140595  (Morten Welinder)

2004-04-19  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-io-channel.c:
	- #include <stdio.h>, as per #134886

2004-04-19  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-db-pager.c:
	- Fix leak with gtk_tree_store_set, #140546  (Morten Welinder)

2004-04-19  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-theme.c:
	- Don't g_object_ref after gtk_style_new, #140525  (Morten Welinder)

2004-04-19  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-toc-pager.c:
	- s/g_free/g_strfreev/ on **paths, fixes #140524 (Morten Welinder)

2004-04-16  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-window.c: