@@ -1,3 +1,8 @@
+2004-08-07  Shaun McCance  <shaunm@gnome.org>
+
+	* src/yelp-html-gtkhtml2.c:
+	- Part of a patch from Kirti Sinha for #139739
+
 2004-08-03  Shaun McCance  <shaunm@gnome.org>
 
 	* stylesheets/l10n.xml.in:
